tests/snapshots/lexer__comments__comment_after_code.snap
---
source: tests/lexer.rs
expression: "lex(\"foo # tail\")"
---
Ok(
    [
        Token {
            kind: Identifier(
                "foo",
            ),
            span: Span {
                start: 0,
                end: 3,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 10,
                end: 10,
            },
        },
    ],
)
