tests/snapshots/lexer__comments__comment_then_newline.snap
---
source: tests/lexer.rs
expression: "lex(\"# a comment\\nfoo\")"
---
Ok(
    [
        Token {
            kind: Newline,
            span: Span {
                start: 11,
                end: 12,
            },
        },
        Token {
            kind: Identifier(
                "foo",
            ),
            span: Span {
                start: 12,
                end: 15,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 15,
                end: 15,
            },
        },
    ],
)
