tests/snapshots/lexer__comments__line_comment.snap
---
source: tests/lexer.rs
expression: "lex(\"# a comment\")"
---
Ok(
    [
        Token {
            kind: Eof,
            span: Span {
                start: 11,
                end: 11,
            },
        },
    ],
)
